2010-06-24  Rob Buis  <rwlbuis@gmail.com>

Reviewed by Dirk Schulze.

        Bug 40880 - SVG properties fill and stroke do not accept system colors
        https://bugs.webkit.org/show_bug.cgi?id=40880

        Handle css system colors in fill and stroke properties.

        Test: svg/css/rect-system-color.xhtml

        * css/CSSParser.cpp: Remove comment and unneeded if condition
        (WebCore::CSSParser::parseValue):
        * css/SVGCSSParser.cpp: Allow css system colors
        (WebCore::CSSParser::parseSVGValue):

Canonical link: https://commits.webkit.org/52837@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61837 268f45cc-cd09-0410-ab3c-d52691b4dbfc